# babel

./: .gitignore  README.md
CamelBabel/: BabelException.hpp  CamelBabel.pro  CamelBabel.qrc  ChatWidget.cpp  ChatWidget.hpp  ChatWidget.ui  ConnectionDialog.cpp  ConnectionDialog.hpp  ConnectionDialog.ui  IAudioAPI.hpp  IEncoder.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  Opus.cpp  Opus.hpp  PortAudio.hpp  RTPCallManager.cpp  RTPCallManager.hpp  RTPPacket.hpp  SettingsDialog.cpp  SettingsDialog.hpp  SettingsDialog.ui  SipHandler.cpp  SipHandler.hpp  SipProtocol.hpp  main.cpp  rtp.hpp
CamelBabelServer/: CMakeLists.txt
CamelBabelServer/include/: Parser.hh  ServerData.hh  TcpClient.hh  TcpServer.hh  config.hh  tools.hh
CamelBabelServer/src/: Parser.cpp  ServerData.cpp  TcpClient.cpp  TcpServer.cpp  main.cpp  tools.cpp
client/: Makefile  testAudio
client/include/: BabelPortAudio.hh  Opus.hpp
client/src/: BabelPortAudio.cpp  Opus.cpp  main.cpp
